--- a/css/style.css
+++ b/css/style.css
@@ -542,7 +542,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 }
 /* Footer */
 #footer {
-	background: #0E436E;
+	background: #045308;
 	padding: 8px 0 10px 0;
 	color: #eee;
 	font-size: 0.9em;
